--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,125 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-		integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-	<link rel="stylesheet" href="./assets/css/style.css" />
-	<title>Work Day Scheduler - Challenge 5: Third-Party APIs </title>
-</head>
+    <!-- Bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
 
-<body>
-	<!-- Header -->
-	<header class="jumbotron">
-		<h1 class="display-3">Work Day Scheduler</h1>
-		<p class="lead">A simple calendar app for scheduling your work day</p>
-		<p id="currentDay" class="lead"></p>
-	</header>
+    <!-- fontawesome -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
 
-	<div class="container">
+    <!-- Google Font API -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
 
-		<!-- Timeblocks start here -->
+    <!-- CSS stylesheet -->
+    <link rel="stylesheet" href="./assets/style.css" />
+    <title>Work Day Scheduler</title>
+  </head>
 
-		<div id="hour8" class="row time-block">
-            <div class="col-md-1 hour">
-                8 AM
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
+  <body>
 
-		<div id="hour9" class="row time-block">
-            <div class="col-md-1 hour">
-                9 AM
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
+    <!-- Jumbotron - Title -->
+    <header class="jumbotron">
+      <h1 class="display">Work Day Schedule</h1>
+      <p class="lead">A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" class="lead"></p>
+    </header>
+    <div class="container">
 
-		<div id="hour10" class="row time-block">
-            <div class="col-md-1 hour">
-                10 AM
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
+      <div class="present"></div>
+      <div class="past"></div>
+      <div class="future"></div>
+      <div class="hour"></div>
 
-		<div id="hour10=1" class="row time-block">
-            <div class="col-md-1 hour">
-                11 AM
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
+      <!-- Timeblocks -->
 
-		<div id="hour12" class="row time-block">
-            <div class="col-md-1 hour">
-                12 PM
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
+      <!-- 8AM -->
+      <div class="row">
+        <div class="col-2 hour">8:00 AM</div>
+        <textarea id="8" class="col-8" placeholder="Task"></textarea>
+        <button class="col-2 saveBtn" onclick="saveText(8)">Save</button>
+      </div>  
+      <!-- 9AM -->
+      <div class="row">
+        <div class="col-2 hour">9:00 AM</div>
+        <textarea id="9" class="col-8" placeholder="Task"></textarea>
+        <button class="col-2 saveBtn" onclick="saveText(9)">Save</button>
+      </div>
+      <!--10AM-->
+      <div class="row">
+        <div class="col-2 hour">10:00 AM</div>
+        <textarea id="10" class="col-8" placeholder="Task"></textarea>
+        <button class="col-2 saveBtn" onclick="saveText(10)">Save</button>
+      </div>
+      <!--11AM-->
+      <div class="row">
+        <div class="col-2 hour">11:00 AM</div>
+        <textarea id="11" class="col-8" placeholder="Task"></textarea>
+        <button class="col-2 saveBtn" onclick="saveText(11)">Save</button>
+      </div>
+      <!--12PM-->
+      <div class="row">
+        <div class="col-2 hour">12:00 PM</div>
+        <textarea id="12" class="col-8" placeholder="Task"></textarea>
+        <button class="col-2 saveBtn" onclick="saveText(12)">Save</button>
+      </div>
+      <!--1PM-->
+      <div class="row">
+        <div class="col-2 hour">1:00 PM</div>
+        <textarea id="13" class="col-8" placeholder="Task"></textarea>
+        <button class="col-2 saveBtn" onclick="saveText(13)">Save</button>
+      </div>
+      <!--2PM-->
+      <div class="row">
+        <div class="col-2 hour">2:00 PM</div>
+        <textarea id="14" class="col-8" placeholder="Task"></textarea>
+        <button class="col-2 saveBtn" onclick="saveText(14)">Save</button>
+      </div>
+      <!--3PM-->
+      <div class="row">
+        <div class="col-2 hour">3:00 PM</div>
+        <textarea id="15" class="col-8" placeholder="Task"></textarea>
+        <button class="col-2 saveBtn" onclick="saveText(15)">Save</button>
+      </div>
+      <!--4PM-->
+      <div class="row">
+        <div class="col-2 hour">4:00 PM</div>
+        <textarea id="16" class="col-8" placeholder="Task"></textarea>
+        <button class="col-2 saveBtn" onclick="saveText(16)">Save</button>
+      </div>
+      <!--5PM-->
+      <div class="row">
+        <div class="col-2 hour">5:00 PM</div>
+        <textarea id="17" class="col-8" placeholder="Task"></textarea>
+        <button class="col-2 saveBtn" onclick="saveText(17)">Save</button>
+      </div>
+    </div>
+  </div>
 
-		<div id="hour13" class="row time-block">
-            <div class="col-md-1 hour">
-                1 PM
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
+    <!-- JQuery Import -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-		<div id="hour14" class="row time-block">
-            <div class="col-md-1 hour">
-                2 PM
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
+    <!-- Moment CDN Import -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
-		<div id="hour15" class="row time-block">
-            <div class="col-md-1 hour">
-                3 PM
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-
-		<div id="hour16" class="row time-block">
-            <div class="col-md-1 hour">
-                4 PM
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-
-		<div id="hour17" class="row time-block">
-            <div class="col-md-1 hour">
-                5 PM
-            </div>
-            <textarea class="col-md-10 description">
-            </textarea>
-            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
-        </div>
-
-	</div>
-
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-	<script src="./assets/js/script.js"></script>
-</body>
-
+    <!-- JavaScript Import  -->
+    <script src='./assets/script.js'></script>
+  </body>
 </html>
